--- a/app.yaml
+++ b/app.yaml
@@ -1,27 +1,17 @@
-application: filewallah
+application: fileroundr
 version: 1
 runtime: python27
 api_version: 1
 threadsafe: yes
 
-builtins:
-- appstats: on
-
 handlers:
-- url: /static
+- url: /static 
   static_dir: static
-
-- url: /favicon.ico
-  static_files: static/img/favicon.ico
-  upload: static/img/favicon.ico
-
-- url: /robots.txt
-  static_files: robots.txt
-  upload: robots.txt
-
-- url: /.*
-  script: main.application
+- url: .*
+  script: main.app
 
 libraries:
-  - name: django
-    version: 1.5
+- name: webapp2
+  version: latest
+- name: jinja2
+  version: latest
