--- a/app.yaml
+++ b/app.yaml
@@ -7,8 +7,13 @@ threadsafe: yes
 handlers:
 - url: /static 
   static_dir: static
-- url: .*
+- url: /required
   script: main.app
+  login: required  
+
+- url: /
+  script: main.app
+
 
 libraries:
 - name: webapp2
