--- a/app.yaml
+++ b/app.yaml
@@ -7,12 +7,9 @@ threadsafe: yes
 handlers:
 - url: /static 
   static_dir: static
-- url: /required
-  script: main.app
-  login: required  
 
-- url: /
-  script: main.app
+- url: .*
+  script: main.app 
 
 
 libraries:
