--- a/app.yaml
+++ b/app.yaml
@@ -5,11 +5,20 @@ api_version: 1
 threadsafe: yes
 
 handlers:
-- url: /static 
-  static_dir: static
+# - url: /static 
+#   static_dir: static
 
 - url: /static/css 
+  mime_type: text/css
   static_dir: static/css
+
+- url: /static/js
+  mime_type: text/javascript
+  static_dir: static/js
+  
+- url: /static/img/(.*\.png) 
+  static_dir: static/img
+ 
 
 - url: .*
   script: main.app 
