--- a/app.yaml
+++ b/app.yaml
@@ -5,14 +5,14 @@ api_version: 1
 threadsafe: yes
 
 handlers:
-- url: /static 
-  static_dir: static
+#- url: /static
+#  static_dir: static
 
-- url: /static/css 
+- url: /static/css
   static_dir: static/css
 
 - url: .*
-  script: main.app 
+  script: main.app
 
 
 libraries:
